--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,15 +19,15 @@
     <LinearLayout
         android:id="@+id/firstLinear"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/SensorImage"
         tools:layout_editor_absoluteX="0dp">
 
         <Button
             android:id="@+id/statusRefreshButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/ic_baseline_refresh_24"
             android:gravity="center"
@@ -40,16 +40,17 @@
         <TextView
             android:id="@+id/statusTxt"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:layout_marginTop="52dp"
             android:layout_weight="2"
+            android:elevation="50dp"
             android:gravity="center"
-            android:text="وضعیت دستگاه "
+            android:text="وضعیت دستگاه"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="25sp" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 
@@ -69,6 +70,7 @@
         android:id="@+id/secondLinear"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/armedStatusTxt">
 
 
@@ -76,6 +78,8 @@
             android:id="@+id/armAlarmButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:backgroundTint="@color/white"
             android:elevation="50dp"
@@ -87,6 +91,8 @@
             android:id="@+id/disarmAlarmButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:backgroundTint="@color/white"
             android:elevation="50dp"
@@ -103,8 +109,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-
+        android:backgroundTint="@color/white"
         android:text="قطع صدای آژیر دستگاه"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
