--- a/app/src/main/res/layout/activity_permissions.xml
+++ b/app/src/main/res/layout/activity_permissions.xml
@@ -24,10 +24,10 @@
         android:layout_marginTop="84dp"
         android:layout_marginEnd="16dp"
         android:padding="10dp"
-        android:textStyle="bold"
         android:text="مجوز دسترسی به لوکیشن و SMS"
         android:textColor="@color/black"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/modemImage" />
 
@@ -48,23 +48,23 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/grant"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="128dp"
         android:text="قبول دسترسی"
         app:cornerRadius="8dp"
+
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descriptionTxt" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/nextPage"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="5dp"
         android:text="ورود به برنامه"
         app:cornerRadius="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/grant" />
 
