--- a/app/src/main/res/layout/activity_choose_device.xml
+++ b/app/src/main/res/layout/activity_choose_device.xml
@@ -10,6 +10,7 @@
         android:id="@+id/txtHelp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:padding="10dp"
         android:text="کدام دستگاه را میخواهید تنظیم کنید؟"
