--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="190dp"
         android:layout_height="90dp"
         android:layout_marginTop="50dp"
-        android:background="@drawable/taraznet2"
+        android:background="@drawable/taraz_n_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,6 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:background="@drawable/customborder"
+        android:elevation="100dp"
         app:layout_constraintTop_toBottomOf="@+id/SensorImage"
         tools:layout_editor_absoluteX="0dp">
 
@@ -29,6 +31,7 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:elevation="50dp"
             android:background="@drawable/ic_baseline_refresh_24"
             android:gravity="center"
             android:textAlignment="center"
@@ -47,108 +50,82 @@
             android:layout_weight="2"
             android:elevation="50dp"
             android:gravity="center"
-            android:text="وضعیت دستگاه"
+            android:text="دریافت وضعیت سیستم"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20sp" />
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/armedStatusTxt"
+
+    <Button
+        android:id="@+id/disarmAndArmAlarmButton"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="110dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="110dp"
+        android:layout_weight="1"
+        android:background="@drawable/customborder"
+        android:backgroundTint="@color/white"
+        android:elevation="50dp"
+        android:enabled="false"
         android:gravity="center"
-        android:text="تعیین وضعیت آماده به کار آلارم دستگاه"
-        android:textAlignment="center"
+        android:text="غیر فعال نمودن دزدگیر"
         android:textColor="@color/black"
-        android:textSize="25sp"
         app:layout_constraintTop_toBottomOf="@+id/firstLinear" />
-
-    <LinearLayout
-        android:id="@+id/secondLinear"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/armedStatusTxt">
-
-
-        <Button
-            android:id="@+id/armAlarmButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="5dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:elevation="50dp"
-            android:gravity="center"
-            android:text="تغییر حالت آلارم به آماده به کار"
-            android:textColor="@color/green" />
-
-        <Button
-            android:id="@+id/disarmAlarmButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:elevation="50dp"
-            android:gravity="center"
-            android:text="تغییر حالت آلارم به غیرفعال"
-            android:textColor="@color/red" />
-
-
-    </LinearLayout>
 
 
     <Button
         android:id="@+id/disableAlarmSoundButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="110dp"
         android:layout_marginTop="60dp"
+        android:layout_marginRight="110dp"
+        android:background="@drawable/customborder"
         android:backgroundTint="@color/white"
-        android:text="قطع صدای آژیر دستگاه"
-        android:textColor="@color/black"
+        android:text="قطع صدای آژیر دزدگیر"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/secondLinear" />
+        app:layout_constraintTop_toBottomOf="@+id/disarmAndArmAlarmButton" />
 
 
     <Button
         android:id="@+id/disableNotificationAlarmButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="110dp"
         android:layout_marginTop="60dp"
+        android:layout_marginRight="110dp"
+        android:background="@drawable/customborder"
         android:backgroundTint="@color/white"
         android:text="قطع صدای آژیر موبایل"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/disableAlarmSoundButton" />
 
 
-
     <Button
         android:id="@+id/configServerBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_margin="5dp"
         android:background="@drawable/ic_baseline_settings_24"
-        android:padding="10dp"
+        android:padding="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/deleteInfoBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_margin="5dp"
         android:background="@drawable/ic_baseline_clear_24"
-        android:padding="10dp"
+        android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
