onTouch color change

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="red">#d42427</color>
     <color name="blackT">#2b2a29</color>
     <color name="blue">#009ed6</color>
+    <color name="darkBlue">#004760</color>
 </resources>
