--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,8 +31,8 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:elevation="50dp"
             android:background="@drawable/ic_baseline_refresh_24"
+            android:elevation="50dp"
             android:gravity="center"
             android:textAlignment="center"
             android:textSize="10sp"
@@ -58,7 +58,7 @@
     </LinearLayout>
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/disarmAndArmAlarmButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -66,54 +66,45 @@
         android:layout_marginTop="50dp"
         android:layout_marginRight="110dp"
         android:layout_weight="1"
-        android:background="@drawable/customborder"
-        android:backgroundTint="@color/white"
         android:elevation="50dp"
         android:enabled="false"
         android:gravity="center"
         android:text="غیر فعال نمودن دزدگیر"
         android:textColor="@color/black"
+        app:cornerRadius="10dp"
         app:layout_constraintTop_toBottomOf="@+id/firstLinear" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/disableAlarmSoundButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="110dp"
         android:layout_marginTop="60dp"
         android:layout_marginRight="110dp"
-        android:background="@drawable/button_selector"
-        android:backgroundTint="@color/white"
         android:text="قطع صدای آژیر دزدگیر"
         android:textColor="@color/white"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/disarmAndArmAlarmButton" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/disableNotificationAlarmButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="110dp"
         android:layout_marginTop="60dp"
         android:layout_marginRight="110dp"
-        android:background="@drawable/button_selector"
         android:text="قطع صدای آژیر موبایل"
         android:textColor="@color/white"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/disableAlarmSoundButton" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:id="@+id/dadffgd"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_selector"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/disableNotificationAlarmButton" />
 
     <Button
         android:id="@+id/configServerBtn"
